--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "npm run gen-api"
   },
   "bin": {
-    "gen-api": "./index.js"
+    "gen-api": "node index.js"
   },
   "repository": {
     "type": "git",
